--- a/vuejs/demo/vite-project/package.json
+++ b/vuejs/demo/vite-project/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^2.1.6",
+    "lodash": "^4.17.21",
     "vue": "^3.0.5"
   },
   "devDependencies": {
